# sample-agentcore-cloudfront-x402-payments

./: .gitignore  LICENSE  PR_DESCRIPTION.md  QUICKSTART.md  README.md
docs/: AGENTCORE.md  API.md  TROUBLESHOOTING.md
payer-agent/: .env.example  Dockerfile  Dockerfile.test  README.md  agentcore_config.yaml  bcl-1.0.0-py3-none-any.whl  gateway_config.yaml  main.py  pyproject.toml
payer-agent/agent/: __init__.py  api_server.py  config.py  gateway_client.py  main.py  mcp_client.py  metrics.py  rate_limiter.py  runtime_client.py  tracing.py
payer-agent/agent/auth/: __init__.py  sigv4.py
payer-agent/agent/tools/: __init__.py  content.py  discovery.py  oracle_attestation.py  payment.py
payer-agent/openapi/: content-tools.yaml
payer-agent/scripts/: chat.py  deploy.sh  deploy_to_agentcore.py  get_cloudfront_url.sh  invoke_gateway.py  test_agent_invocation.py  test_gateway_api.py  test_gateway_target.py
payer-agent/tests/: __init__.py  conftest.py  test_402_response.py  test_auth.py  test_config.py  test_content.py  test_content_delivery.py  test_error_scenarios.py  test_gateway_api.py  test_invocation.py  test_mcp_client.py  test_metrics.py  test_oracle_attestation.py  test_payment.py  test_payment_analysis.py  test_payment_signing.py  test_rate_limiter.py  test_retry_with_payment.py  test_runtime_client.py  test_tracing.py
payer-agent/tests/mocks/: __init__.py  gateway_mock.py
payer-infrastructure/: README.md  package-lock.json  package.json
scripts/: README.md  setup-infrastructure.sh  setup-payer-agent.sh  setup.sh  sync-env.sh  verify-setup.sh
(+66 files in other folders)
